# gemini

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
api/: app.py  chat.py
api/utils/: chat.py
models/: user_prompt.py
repositories/: db.py  get_chat_history.py
routes/: app.py
scripts/: format.sh  run.sh
services/: chat.py
utils/: chat.py
