[project]
name = "gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "mangum>=0.19.0",
    "openai>=1.66.3",
    "ruff>=0.11.0",
]

[dependency-groups]
dev = [
    "uvicorn>=0.34.0",
]
